membuat templates-grid-layout

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="list">
             <ul>
                 <li><a href="https://agungh21.github.io/css-main/side-menu-responsive/index.html">Side Menu Responsive</a></li>
+                <li><a href="https://agungh21.github.io/css-main/templates-grid-layout/index.html">Templates Grid Layout</a></li>
             </ul>
             
         </div>
