membuat templates-animated-background

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <ul>
                 <li><a href="https://agungh21.github.io/css-main/side-menu-responsive/index.html">Side Menu Responsive</a></li>
                 <li><a href="https://agungh21.github.io/css-main/templates-grid-layout/index.html">Templates Grid Layout</a></li>
+                <li><a href="https://agungh21.github.io/css-main/templates-animated-background/index.html">Templates Animated Background</a></li>
             </ul>
             
         </div>
