main index responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Poppins;
         }
         .wrapper{
-            width: 800px;
+            width: 100%;
             margin: 0 auto;
         }
 
