--- a/index.html
+++ b/index.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
-        body {
-            font-family: Poppins;
-        }
-        .wrapper{
-            width: 100%;
-            margin: 0 auto;
-        }
+      body {
+        font-family: Poppins;
+      }
+      .wrapper {
+        width: 100%;
+        margin: 0 auto;
+      }
 
-        h1{
-            text-align: center;
-        }
+      h1 {
+        text-align: center;
+      }
 
-        .bg{
-            background-color: #eeeeee;
-            padding: 5px;
-        }
+      .bg {
+        background-color: #eeeeee;
+        padding: 5px;
+      }
 
-        .list{
-            padding: 10px;
-        }
+      .list {
+        padding: 10px;
+      }
 
-        ul{
-            list-style: circle;
-        }
+      ul {
+        list-style: circle;
+      }
 
-        a{
-            color: black;
-            text-decoration: none;
-        }
+      a {
+        color: black;
+        text-decoration: none;
+      }
 
-        a:hover {
-            text-decoration: underline;
-        }
+      a:hover {
+        text-decoration: underline;
+      }
 
-        a:active {
-            color: black;
-        }
-
+      a:active {
+        color: black;
+      }
     </style>
     <title>Css Main</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="bg">
-            <h1>CSS LIST</h1>
-        </div>
-        <div class="list">
-            <ul>
-                <li><a href="https://agungh21.github.io/css-main/side-menu-responsive/index.html">Side Menu Responsive</a></li>
-                <li><a href="https://agungh21.github.io/css-main/templates-grid-layout/index.html">Templates Grid Layout</a></li>
-                <li><a href="https://agungh21.github.io/css-main/templates-animated-background/index.html">Templates Animated Background</a></li>
-            </ul>
-            
-        </div>
+      <div class="bg">
+        <h1>CSS LIST</h1>
+      </div>
+      <div class="list">
+        <ul>
+          <li>
+            <a
+              href="https://agungh21.github.io/css-main/side-menu-responsive/index.html"
+              >Side Menu Responsive</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://agungh21.github.io/css-main/templates-grid-layout/index.html"
+              >Templates Grid Layout</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://agungh21.github.io/css-main/templates-animated-background/index.html"
+              >Templates Animated Background</a
+            >
+          </li>
+          <li>
+            <a href="https://agungh21.github.io/css-main/buttons/index.html"
+              >Buttons</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
 </html>
