membuat buttons:button-style-01

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -16,9 +16,22 @@
   </head>
   <body>
     <div class="container">
-      <div class="wrapper">
-        <h1 class="power-on">Power Button</h1>
-        <input type="checkbox" id="power" />
+      <div class="row">
+        <div class="col">
+          <h1 class="power-on">Power Button</h1>
+        </div>
+        <div class="col">
+          <input type="checkbox" id="power" />
+        </div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">
+          <h1 class="button-style-01">Button Style 01</h1>
+        </div>
+        <div class="col">
+          <input type="submit" class="btn btn-st-01" />
+        </div>
       </div>
     </div>
     <hr />
