buttons:tambah komentar

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- power button -->
       <div class="row">
         <div class="col">
           <h1 class="power-on">Power Button</h1>
@@ -24,7 +25,11 @@
           <input type="checkbox" id="power" />
         </div>
       </div>
+      <!-- end power button -->
+
       <hr />
+
+      <!-- button style 01 -->
       <div class="row">
         <div class="col">
           <h1 class="button-style-01">Button Style 01</h1>
@@ -33,6 +38,7 @@
           <input type="submit" class="btn btn-st-01" />
         </div>
       </div>
+      <!-- end button style 01 -->
     </div>
     <hr />
   </body>
