membuat forms:input style 1 & 2

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
               >Buttons</a
             >
           </li>
+          <li>
+            <a href="https://agungh21.github.io/css-main/forms/index.html"
+              >Forms</a
+            >
+          </li>
         </ul>
       </div>
     </div>
