membuat forms:input style 3, 4, 5

--- a/forms/index.html
+++ b/forms/index.html
@@ -9,44 +9,104 @@
   </head>
   <body>
     <div class="container">
-      <!-- Input Style 01 -->
+      <!-- Input Style 1 -->
       <div class="row">
         <div class="col">
-          <h1 class="input-st-01">Input Style 01</h1>
+          <h1 class="input-st-1">Input Style 1</h1>
         </div>
         <div class="col">
           <div class="form">
-            <label for="email" class="form_label_st_01">Email</label>
+            <label for="email" class="form_label_st_1">Email</label>
             <input
               type="text"
               id="email"
-              class="form_input_st_01"
+              class="form_input_st_1"
               autocomplete="off"
             />
           </div>
         </div>
       </div>
-      <!-- end Input Style 01 -->
+      <!-- end Input Style 1 -->
 
       <hr />
 
-      <!-- Input Style 02 -->
+      <!-- Input Style 2 -->
       <div class="row">
         <div class="col">
-          <h1 class="input-st-02">Input Style 02</h1>
+          <h1 class="input-st-2">Input Style 2</h1>
         </div>
         <div class="col">
           <div class="form"></div>
           <input
             type="text"
             id="email"
-            class="form_input_st_02"
+            class="form_input_st_2"
             placeholder="email"
           />
         </div>
       </div>
     </div>
-    <!-- end Input Style 02 -->
+    <!-- end Input Style 2 -->
+
+    <hr />
+
+      <!-- Input Style 3 -->
+      <div class="row">
+        <div class="col">
+          <h1 class="input-st-3">Input Style 3</h1>
+        </div>
+        <div class="col">
+          <div class="form"></div>
+          <input
+            type="text"
+            id="email"
+            class="form_input_st_3"
+            placeholder="email"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- end Input Style 3 -->
+
+    <hr />
+
+      <!-- Input Style 4 -->
+      <div class="row">
+        <div class="col">
+          <h1 class="input-st-4">Input Style 4</h1>
+        </div>
+        <div class="col">
+          <div class="form"></div>
+          <input
+            type="text"
+            id="email"
+            class="form_input_st_4"
+            placeholder="email"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- end Input Style 4 -->
+
+    <hr />
+    
+      <!-- Input Style 5 -->
+      <div class="row">
+        <div class="col">
+          <h1 class="input-st-5">Input Style 5</h1>
+        </div>
+        <div class="col">
+          <div class="form"></div>
+          <input
+            type="text"
+            id="email"
+            class="form_input_st_5"
+            placeholder="email"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- end Input Style 5 -->
 
     <hr />
   </body>
