--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
               >Forms</a
             >
           </li>
+          <li>
+            <a href="https://agungh21.github.io/css-main/forms/index.html"
+              >Cards</a
+            >
+          </li>
         </ul>
       </div>
     </div>
