membuat alerts: alert 1

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
               >Cards</a
             >
           </li>
+          <li>
+            <a href="https://agungh21.github.io/css-main/alerts/index.html"
+              >Alerts</a
+            >
+          </li>
         </ul>
       </div>
     </div>
