--- a/cards/index.html
+++ b/cards/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- Input Style 1 -->
+      <!-- card 1 -->
       <div class="row">
         <div class="col">
           <h1 class="input-st-1">Card 1</h1>
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <!-- end Input Style 1 -->
+      <!-- end card 1 -->
     </div>
     <hr />
   </body>
