--- a/buttons/index.html
+++ b/buttons/index.html
@@ -39,7 +39,20 @@
         </div>
       </div>
       <!-- end button style 01 -->
+
+      <hr />
+
+      <!-- button style 02 -->
+      <div class="row">
+        <div class="col">
+          <h1 class="button-style-02">Button Style 02</h1>
+        </div>
+        <div class="col">
+          <input type="submit" class="btn btn-st-02" />
+        </div>
+      </div>
+      <!-- end button style 02 -->
+      <hr />
     </div>
-    <hr />
   </body>
 </html>
