membuat button glow

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -52,6 +52,20 @@
         </div>
       </div>
       <!-- end button style 02 -->
+
+      <hr />
+
+      <!-- button glow -->
+      <div class="row">
+        <div class="col">
+          <h1 class="button-glow">Button Glow</h1>
+        </div>
+        <div class="col">
+          <input type="submit" class="btn btn-glow" />
+        </div>
+      </div>
+      <!-- end button glow -->
+
       <hr />
     </div>
   </body>
