membuat button 3d flip

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -67,6 +67,19 @@
       <!-- end button glow -->
 
       <hr />
+
+      <!-- button 3d flip -->
+      <div class="row">
+        <div class="col">
+          <h1 class="button-3d-flip">Button 3d Flip</h1>
+        </div>
+        <div class="col">
+          <span class="btn btn-3d-flip"><a href="#"></a></span>
+        </div>
+      </div>
+      <!-- end button 3d flip -->
+
+      <hr />
     </div>
   </body>
 </html>
