--- a/cards/index.html
+++ b/cards/index.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=x" />
     <title>cards style</title>
+
+    <!-- main css -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- bootsrap icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <div class="container">
       <!-- card 1 -->
       <div class="row">
         <div class="col">
-          <h1 class="input-st-1">Card 1</h1>
+          <h1 class="title">Card 1</h1>
         </div>
         <div class="col">
           <div class="card">
@@ -29,8 +37,99 @@
           </div>
         </div>
       </div>
-      <!-- end card 1 -->
     </div>
+    <!-- end card 1 -->
+
+    <hr />
+    <!-- vertical card peicing -->
+    <div class="container">
+      <div class="row">
+        <h1 class="title">VERTICAL CARD SLIDE</h1>
+        <div class="col">
+          <div class="wrapper-vcs">
+            <div class="outer">
+              <div class="card-vcs" style="--delay: -1">
+                <div class="content">
+                  <div class="img">
+                    <img
+                      src="https://source.unsplash.com/500x400?people"
+                      alt=""
+                    />
+                  </div>
+                  <div class="details">
+                    <span class="name">Muhammad Agung Hartono</span>
+                    <p>Frontend Developer</p>
+                  </div>
+                </div>
+                <a href="#">Follow</a>
+              </div>
+              <div class="card-vcs" style="--delay: 0">
+                <div class="content">
+                  <div class="img">
+                    <img
+                      src="https://source.unsplash.com/500x400?people"
+                      alt=""
+                    />
+                  </div>
+                  <div class="details">
+                    <span class="name">Adam</span>
+                    <p>YouTuber & Blogger</p>
+                  </div>
+                </div>
+                <a href="#">Follow</a>
+              </div>
+              <div class="card-vcs" style="--delay: 1">
+                <div class="content">
+                  <div class="img">
+                    <img
+                      src="https://source.unsplash.com/500x400?people"
+                      alt=""
+                    />
+                  </div>
+                  <div class="details">
+                    <span class="name">Hawa</span>
+                    <p>Freelancer & Vlogger</p>
+                  </div>
+                </div>
+                <a href="#">Follow</a>
+              </div>
+              <div class="card-vcs" style="--delay: 2">
+                <div class="content">
+                  <div class="img">
+                    <img
+                      src="https://source.unsplash.com/500x400?people"
+                      alt=""
+                    />
+                  </div>
+                  <div class="details">
+                    <span class="name">Aninda</span>
+                    <p>Backend Developer</p>
+                  </div>
+                </div>
+                <a href="#">Follow</a>
+              </div>
+              <div class="card-vcs" style="--delay: 2">
+                <div class="content">
+                  <div class="img">
+                    <img
+                      src="https://source.unsplash.com/500x400?people"
+                      alt=""
+                    />
+                  </div>
+                  <div class="details">
+                    <span class="name">Despa</span>
+                    <p>Teacher & Advertiser</p>
+                  </div>
+                </div>
+                <a href="#">Follow</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end vertical card peicing -->
+    </div>
+
     <hr />
   </body>
 </html>
