--- a/cards/index.html
+++ b/cards/index.html
@@ -20,7 +20,7 @@
       <!-- card 1 -->
       <div class="row">
         <div class="col">
-          <h1 class="title">Card 1</h1>
+          <h1 class="title">Simple Card</h1>
         </div>
         <div class="col">
           <div class="card">
