fix index main cards

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             >
           </li>
           <li>
-            <a href="https://agungh21.github.io/css-main/forms/index.html"
+            <a href="https://agungh21.github.io/css-main/cards/index.html"
               >Cards</a
             >
           </li>
